--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <app-header></app-header>
+<div class="container m-5">
+  <app-body></app-body>
+</div>
 
-<app-body class="container"></app-body>
-
+<app-footer></app-footer>
